--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-22 02:48 -->
+<!-- 2022-11-22 20:15 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,47 +46,47 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org3844ed9">1. 妙妙文章</a>
+<li><a href="#orgd5c0616">1. 妙妙文章</a>
 <ul>
-<li><a href="#org4bbaf88">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org705ae86">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#orgedad1b7">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orge8bcd80">1.4. 关于编辑器</a></li>
-<li><a href="#orgea8f194">1.5. 关于代码</a>
+<li><a href="#org58745c0">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org4eb0944">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org71756fb">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orgd42ad43">1.4. 关于编辑器</a></li>
+<li><a href="#orgcdc66da">1.5. 关于代码</a>
 <ul>
-<li><a href="#org96ff0b4">1.5.1. Lisp</a></li>
+<li><a href="#org1f5f546">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orgc4ed2d8">1.6. 关于CPU</a></li>
-<li><a href="#org5cfd035">1.7. 关于算法</a>
+<li><a href="#org6cdedaa">1.6. 关于CPU</a></li>
+<li><a href="#org627967e">1.7. 关于算法</a>
 <ul>
-<li><a href="#org4292078">1.7.1. 关于随机</a></li>
+<li><a href="#org369caaf">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orge5ed25b">1.8. 关于AI</a></li>
-<li><a href="#orga0e437a">1.9. 关于软件</a>
+<li><a href="#org282005c">1.8. 关于AI</a></li>
+<li><a href="#orgc42e67f">1.9. 关于软件</a>
 <ul>
-<li><a href="#org6de935e">1.9.1. SQLite</a></li>
+<li><a href="#orge741882">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgb8afbfb">1.10. 关于workflow</a></li>
+<li><a href="#org0f3047f">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org6e9f3c8">2. 棒棒视频</a>
+<li><a href="#org1d50122">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgbfb8af3">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org2ca1e0d">2.2. 各种剧</a></li>
-<li><a href="#orgeb1fc4c">2.3. 电影</a></li>
+<li><a href="#orgad9217b">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgc38c9d8">2.2. 各种剧</a></li>
+<li><a href="#org350f7d8">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org818e66c">3. 快乐游戏</a></li>
-<li><a href="#orgd2d5abd">4. 宝藏博主</a></li>
-<li><a href="#org80cbcd3">5. 有意思的</a>
+<li><a href="#orgd9b1985">3. 快乐游戏</a></li>
+<li><a href="#org040777b">4. 宝藏博主</a></li>
+<li><a href="#orge048f7b">5. 有意思的</a>
 <ul>
-<li><a href="#org327d754">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org18ba653">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org0054130">6. 我想玩的</a></li>
+<li><a href="#org1bc1875">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -95,8 +95,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org3844ed9" class="outline-2">
-<h2 id="org3844ed9"><span class="section-number-2">1.</span> <a href="#org3844ed9">妙妙文章</a></h2>
+<div id="outline-container-orgd5c0616" class="outline-2">
+<h2 id="orgd5c0616"><span class="section-number-2">1.</span> <a href="#orgd5c0616">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org57d60b2">
+<figure id="orgdc816a3">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -497,8 +497,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org4bbaf88" class="outline-3">
-<h3 id="org4bbaf88"><span class="section-number-3">1.1.</span> <a href="#org4bbaf88">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org58745c0" class="outline-3">
+<h3 id="org58745c0"><span class="section-number-3">1.1.</span> <a href="#org58745c0">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -539,8 +539,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-org705ae86" class="outline-3">
-<h3 id="org705ae86"><span class="section-number-3">1.2.</span> <a href="#org705ae86">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org4eb0944" class="outline-3">
+<h3 id="org4eb0944"><span class="section-number-3">1.2.</span> <a href="#org4eb0944">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -570,8 +570,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-orgedad1b7" class="outline-3">
-<h3 id="orgedad1b7"><span class="section-number-3">1.3.</span> <a href="#orgedad1b7">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org71756fb" class="outline-3">
+<h3 id="org71756fb"><span class="section-number-3">1.3.</span> <a href="#org71756fb">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -605,8 +605,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orge8bcd80" class="outline-3">
-<h3 id="orge8bcd80"><span class="section-number-3">1.4.</span> <a href="#orge8bcd80">关于编辑器</a></h3>
+<div id="outline-container-orgd42ad43" class="outline-3">
+<h3 id="orgd42ad43"><span class="section-number-3">1.4.</span> <a href="#orgd42ad43">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -622,8 +622,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgea8f194" class="outline-3">
-<h3 id="orgea8f194"><span class="section-number-3">1.5.</span> <a href="#orgea8f194">关于代码</a></h3>
+<div id="outline-container-orgcdc66da" class="outline-3">
+<h3 id="orgcdc66da"><span class="section-number-3">1.5.</span> <a href="#orgcdc66da">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -648,8 +648,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org96ff0b4" class="outline-4">
-<h4 id="org96ff0b4"><span class="section-number-4">1.5.1.</span> <a href="#org96ff0b4">Lisp</a></h4>
+<div id="outline-container-org1f5f546" class="outline-4">
+<h4 id="org1f5f546"><span class="section-number-4">1.5.1.</span> <a href="#org1f5f546">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -672,8 +672,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orgc4ed2d8" class="outline-3">
-<h3 id="orgc4ed2d8"><span class="section-number-3">1.6.</span> <a href="#orgc4ed2d8">关于CPU</a></h3>
+<div id="outline-container-org6cdedaa" class="outline-3">
+<h3 id="org6cdedaa"><span class="section-number-3">1.6.</span> <a href="#org6cdedaa">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -688,8 +688,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org5cfd035" class="outline-3">
-<h3 id="org5cfd035"><span class="section-number-3">1.7.</span> <a href="#org5cfd035">关于算法</a></h3>
+<div id="outline-container-org627967e" class="outline-3">
+<h3 id="org627967e"><span class="section-number-3">1.7.</span> <a href="#org627967e">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -708,8 +708,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org4292078" class="outline-4">
-<h4 id="org4292078"><span class="section-number-4">1.7.1.</span> <a href="#org4292078">关于随机</a></h4>
+<div id="outline-container-org369caaf" class="outline-4">
+<h4 id="org369caaf"><span class="section-number-4">1.7.1.</span> <a href="#org369caaf">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -723,8 +723,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orge5ed25b" class="outline-3">
-<h3 id="orge5ed25b"><span class="section-number-3">1.8.</span> <a href="#orge5ed25b">关于AI</a></h3>
+<div id="outline-container-org282005c" class="outline-3">
+<h3 id="org282005c"><span class="section-number-3">1.8.</span> <a href="#org282005c">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -734,8 +734,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orga0e437a" class="outline-3">
-<h3 id="orga0e437a"><span class="section-number-3">1.9.</span> <a href="#orga0e437a">关于软件</a></h3>
+<div id="outline-container-orgc42e67f" class="outline-3">
+<h3 id="orgc42e67f"><span class="section-number-3">1.9.</span> <a href="#orgc42e67f">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -746,8 +746,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org6de935e" class="outline-4">
-<h4 id="org6de935e"><span class="section-number-4">1.9.1.</span> <a href="#org6de935e">SQLite</a></h4>
+<div id="outline-container-orge741882" class="outline-4">
+<h4 id="orge741882"><span class="section-number-4">1.9.1.</span> <a href="#orge741882">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -761,8 +761,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgb8afbfb" class="outline-3">
-<h3 id="orgb8afbfb"><span class="section-number-3">1.10.</span> <a href="#orgb8afbfb">关于workflow</a></h3>
+<div id="outline-container-org0f3047f" class="outline-3">
+<h3 id="org0f3047f"><span class="section-number-3">1.10.</span> <a href="#org0f3047f">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -772,8 +772,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org6e9f3c8" class="outline-2">
-<h2 id="org6e9f3c8"><span class="section-number-2">2.</span> <a href="#org6e9f3c8">棒棒视频</a></h2>
+<div id="outline-container-org1d50122" class="outline-2">
+<h2 id="org1d50122"><span class="section-number-2">2.</span> <a href="#org1d50122">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -832,8 +832,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orgbfb8af3" class="outline-3">
-<h3 id="orgbfb8af3"><span class="section-number-3">2.1.</span> <a href="#orgbfb8af3">Veritasium 真理元素</a></h3>
+<div id="outline-container-orgad9217b" class="outline-3">
+<h3 id="orgad9217b"><span class="section-number-3">2.1.</span> <a href="#orgad9217b">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -864,8 +864,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org2ca1e0d" class="outline-3">
-<h3 id="org2ca1e0d"><span class="section-number-3">2.2.</span> <a href="#org2ca1e0d">各种剧</a></h3>
+<div id="outline-container-orgc38c9d8" class="outline-3">
+<h3 id="orgc38c9d8"><span class="section-number-3">2.2.</span> <a href="#orgc38c9d8">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -889,8 +889,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgeb1fc4c" class="outline-3">
-<h3 id="orgeb1fc4c"><span class="section-number-3">2.3.</span> <a href="#orgeb1fc4c">电影</a></h3>
+<div id="outline-container-org350f7d8" class="outline-3">
+<h3 id="org350f7d8"><span class="section-number-3">2.3.</span> <a href="#org350f7d8">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -916,7 +916,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="org8fb1b67">
+<figure id="org5f20f80">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -933,8 +933,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org818e66c" class="outline-2">
-<h2 id="org818e66c"><span class="section-number-2">3.</span> <a href="#org818e66c">快乐游戏</a></h2>
+<div id="outline-container-orgd9b1985" class="outline-2">
+<h2 id="orgd9b1985"><span class="section-number-2">3.</span> <a href="#orgd9b1985">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -964,8 +964,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgd2d5abd" class="outline-2">
-<h2 id="orgd2d5abd"><span class="section-number-2">4.</span> <a href="#orgd2d5abd">宝藏博主</a></h2>
+<div id="outline-container-org040777b" class="outline-2">
+<h2 id="org040777b"><span class="section-number-2">4.</span> <a href="#org040777b">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -976,7 +976,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org9c96d73">
+<figure id="orge45c04b">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -984,8 +984,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org80cbcd3" class="outline-2">
-<h2 id="org80cbcd3"><span class="section-number-2">5.</span> <a href="#org80cbcd3">有意思的</a></h2>
+<div id="outline-container-orge048f7b" class="outline-2">
+<h2 id="orge048f7b"><span class="section-number-2">5.</span> <a href="#orge048f7b">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1017,8 +1017,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org327d754" class="outline-3">
-<h3 id="org327d754"><span class="section-number-3">5.1.</span> <a href="#org327d754">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org18ba653" class="outline-3">
+<h3 id="org18ba653"><span class="section-number-3">5.1.</span> <a href="#org18ba653">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1030,8 +1030,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org0054130" class="outline-2">
-<h2 id="org0054130"><span class="section-number-2">6.</span> <a href="#org0054130">我想玩的</a></h2>
+<div id="outline-container-org1bc1875" class="outline-2">
+<h2 id="org1bc1875"><span class="section-number-2">6.</span> <a href="#org1bc1875">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1054,7 +1054,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-11-21 18:05</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-22 02:48</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-22 20:15</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
