--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-22 02:48 -->
+<!-- 2022-11-22 20:15 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>小渴栈</title>
@@ -47,7 +47,7 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org67edb23">1. 文章列表</a></li>
+<li><a href="#org57a4272">1. 文章列表</a></li>
 </ul>
 </div>
 </nav>
@@ -57,18 +57,18 @@
 </p>
 
 <p>
-用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#orgece6c7c">1</a> 所示.
+用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#orgd41807e">1</a> 所示.
 </p>
 
 
-<figure id="orgece6c7c">
+<figure id="orgd41807e">
 <img src="./diagram.svg" alt="diagram.svg" class="org-svg" width="90%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>博客内容可视化</figcaption>
 </figure>
 
-<div id="outline-container-org67edb23" class="outline-2">
-<h2 id="org67edb23"><span class="section-number-2">1.</span> <a href="#org67edb23">文章列表</a></h2>
+<div id="outline-container-org57a4272" class="outline-2">
+<h2 id="org57a4272"><span class="section-number-2">1.</span> <a href="#org57a4272">文章列表</a></h2>
 <div class="outline-text-2" id="text-1">
 <div data-pagefind-ignore="all">
 <ul class="org-ul">
@@ -77,6 +77,13 @@
 <ul class="org-ul">
 <li><a href="content/qq-group-export.html">导出QQ群成员</a></li>
 <li><a href="content/gadgets.html">我的小玩意们</a></li>
+<li>collections
+<ul class="org-ul">
+<li><a href="content/collections/tools.html">有用的工具</a></li>
+<li><a href="content/collections/contests.html">一些有意思的比赛</a></li>
+<li><a href="content/collections/life-tips.html">生活小贴士</a></li>
+<li><a href="content/collections/index.html">收藏夹</a></li>
+</ul></li>
 <li>java
 <ul class="org-ul">
 <li><a href="content/java/junit4-first-encounter.html">JUnit4 初见</a></li>
@@ -84,11 +91,6 @@
 <li>jb-idea
 <ul class="org-ul">
 <li><a href="content/jb-idea/class-diagrams.html">Java Class 可视化</a></li>
-</ul></li>
-<li>collections
-<ul class="org-ul">
-<li><a href="content/collections/life-tips.html">生活小贴士</a></li>
-<li><a href="content/collections/index.html">收藏夹</a></li>
 </ul></li>
 <li>linux
 <ul class="org-ul">
@@ -116,7 +118,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-25 09:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 21:44</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-22 02:48</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-22 20:15</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/index.org">index.org</a></td></tr>
 </table>
